--- a/espectros.ipynb
+++ b/espectros.ipynb
@@ -1436,7 +1436,7 @@
    "source": [
     "# Salvar os espectros processados em formato .spec para uso no STARLIGHT\n",
     "\n",
-    "output_dir = \"/home/pierre/pierre_work1/Faculdade_teiu/github_teiu/Spectra_pyraf/Projetos/espectros_starlight/\"\n",
+    "output_dir = \"./espectros_BCDs/5-Specs_Starlight_input/\"\n",
     "\n",
     "for i, df in enumerate(df_final, start=1):\n",
     "    # Criar nome do arquivo\n",
@@ -1462,7 +1462,7 @@
    "source": [
     "# Salvar os espectros processados em formato .spec para uso no STARLIGHT\n",
     "\n",
-    "output_dir = \"/home/pierre/pierre_work1/Faculdade_teiu/github_teiu/Spectra_pyraf/Projetos/espectros_starlight/\"\n",
+    "output_dir = \"./espectros_BCDs/5-Specs_Starlight_input/\"\n",
     "\n",
     "print(\"Salvando espectros em formato compatível com STARLIGHT...\\n\")\n",
     "\n",
@@ -1566,7 +1566,7 @@
    "source": [
     "from starlight_toolkit.output import read_output_file\n",
     "\n",
-    "spesc_starlight = [pd.read_csv(f'/home/pierre/pierre_work1/Faculdade_teiu/github_teiu/Spectra_pyraf/Projetos/espectros_starlight/{i}_BCD.spec', sep='\\t', header=None) for i in range(1, 7)]\n",
+    "spesc_starlight = [pd.read_csv(f'./espectros_BCDs/5-Specs_Starlight_input/1_BCD.spec/{i}_BCD.spec', sep='\\t', header=None) for i in range(1, 7)]\n",
     "BCD_antigo_output = [read_output_file(f'/home/pierre/starlight/STARLIGHTv06/output/antigos/{i}_BCD_antigo.out') for i in range(1, 7)]\n",
     "BCD_new_output = [read_output_file(f'/home/pierre/starlight/STARLIGHTv06/output/new/{i}_BCD_new.out') for i in range(1, 7)]\n",
     "BCD_new_2_output = [read_output_file(f'/home/pierre/starlight/STARLIGHTv06/output/new_2/{i}_BCD_new.out') for i in range(1, 7)]\n",
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "id": "648f1767",
    "metadata": {},
    "outputs": [
@@ -1607,7 +1607,7 @@
     }
    ],
    "source": [
-    "df_spec_1_starlight = pd.read_csv('/home/pierre/pierre_work1/Faculdade_teiu/github_teiu/Spectra_pyraf/Projetos/espectros_starlight/1_BCD.spec', \n",
+    "df_spec_1_starlight = pd.read_csv('./espectros_BCDs/5-Specs_Starlight_input/1_BCD.spec', \n",
     "                                   sep=' ', \n",
     "                                   header=None, \n",
     "                                   names=['wavelength', 'flux', 'error', 'flag'])\n",
@@ -1957,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "id": "46a60cfb",
    "metadata": {},
    "outputs": [
@@ -1984,7 +1984,7 @@
    "source": [
     "# Salvar o espectro residual em diferentes formatos\n",
     "\n",
-    "output_dir = \"/home/pierre/pierre_work1/Faculdade_teiu/github_teiu/Spectra_pyraf/Projetos/espectros_starlight/\"\n",
+    "output_dir = \"./espectros_starlight_analise/\"\n",
     "\n",
     "# Salvar como CSV (fácil de ler e processar)\n",
     "output_csv = f\"{output_dir}1_BCD_residual.csv\"\n",
